# advisor_watch

./: .gitignore  Dockerfile  README.md  compose.yaml  genres.txt  pyproject.toml  requirements.txt
src/advisor_watch/: cli.py  discord.py
src/ra_scrape/: graphql.py  templates.py  web.py
