[project]
name = "advisor_watch"
version = "1.0.0"
description = "Advisor Watch"
requires-python = ">=3.12"
dependencies = [
    "requests",
    "cachetools",
    "click",
    "loguru"
]

[project.scripts]
advisor-watch = "advisor_watch:cli.run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ra_scrape", "src/advisor_watch"]